# webclaw

./: .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.claude/agents/: wc-bench-runner.md  wc-mcp-expert.md  wc-rust-expert.md
.claude/commands/: bench.md  commit.md  cook.md  release.md  review.md
.claude/hooks/: cargo_fmt_check.py  secret_scanner.py  session_start_inject.py  wasm_boundary_check.py
.claude/hooks/lib/: hook_lib.py
.claude/plans/templates/: bug-fix-template.md  feature-implementation-template.md  refactor-template.md
.claude/rules/: crate-boundaries.md  development-rules.md  orchestration-protocol.md  primary-workflow.md
.claude/skills/using-skills/: SKILL.md
.claude/skills/wc-arch-guard/: SKILL.md
.claude/skills/wc-bot-detection-audit/: SKILL.md
.claude/skills/wc-code-audit/: SKILL.md
.claude/skills/wc-config-guard/: SKILL.md
.claude/skills/wc-cook/: SKILL.md
.claude/skills/wc-debug-map/: SKILL.md
.claude/skills/wc-deps-audit/: SKILL.md
.claude/skills/wc-extraction-bench/: SKILL.md
.claude/skills/wc-github-ref/: SKILL.md
.claude/skills/wc-graph/: SKILL.md
.claude/skills/wc-mcp-guard/: SKILL.md
.claude/skills/wc-optimize/: SKILL.md
.claude/skills/wc-output-guard/: SKILL.md
.claude/skills/wc-pre-commit/: SKILL.md
.claude/skills/wc-predict/: SKILL.md
.claude/skills/wc-release/: SKILL.md
.claude/skills/wc-research-guide/: SKILL.md
.claude/skills/wc-review-v2/: SKILL.md
.claude/skills/wc-scenario/: SKILL.md
.claude/skills/wc-session-save/: SKILL.md
.github/workflows/: release.yml
benchmarks/: README.md  targets_1000.txt
benchmarks/runs/: analyze.py
crates/webclaw-bench/: Cargo.toml
crates/webclaw-bench/src/: main.rs
crates/webclaw-cli/: Cargo.toml
crates/webclaw-cli/src/: cloud.rs  main.rs
crates/webclaw-core/: Cargo.toml
crates/webclaw-core/src/: brand.rs  data_island.rs  diff.rs  domain.rs  extractor.rs  js_eval.rs  lib.rs  markdown.rs  metadata.rs  noise.rs  structured_data.rs  types.rs  youtube.rs
crates/webclaw-core/src/llm/: body.rs  cleanup.rs  images.rs  links.rs  metadata.rs  mod.rs
crates/webclaw-fetch/: Cargo.toml
crates/webclaw-fetch/src/: browser.rs  client.rs  crawler.rs  document.rs  lib.rs  linkedin.rs  proxy.rs  reddit.rs  sitemap.rs  tls.rs
crates/webclaw-llm/: Cargo.toml
crates/webclaw-llm/src/: chain.rs  clean.rs  extract.rs  lib.rs  provider.rs  summarize.rs
crates/webclaw-llm/src/providers/: anthropic.rs  ollama.rs  openai.rs
crates/webclaw-mcp/: Cargo.toml
crates/webclaw-mcp/src/: cloud.rs  main.rs  serpapi.rs  server.rs  tools.rs
crates/webclaw-pdf/: Cargo.toml
crates/webclaw-pdf/src/: lib.rs
plans/.archive-2026-04-22-readability-updates-from-study/: plan.md
plans/2026-04-22-study-followup/: 01-quick-wins.md  02-benchmark-harness.md  03-readability-research.md  04-release-pipeline.md  05-tls-tracking.md  README.md
plans/2026-04-22-upstream-feature-port/: 01-oss-hygiene.md  02-webclaw-server.md  03-docker-distribution.md  04-benchmark-corpus.md  README.md
