[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.4"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/0xMassi/webclaw"

[workspace.dependencies]
webclaw-core = { path = "crates/webclaw-core", version = "0.3.4" }
webclaw-fetch = { path = "crates/webclaw-fetch", version = "0.3.4" }
webclaw-llm = { path = "crates/webclaw-llm", version = "0.3.4" }
webclaw-pdf = { path = "crates/webclaw-pdf", version = "0.3.4" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# Deny common bug-class lints workspace-wide.
all = { level = "deny", priority = -1 }
# Pedantic as warnings only — surfaces improvements without blocking build.
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = 1

# webclaw-mcp ships to Claude Desktop / Claude Code; bias toward binary size
# (faster download, smaller distribution) over raw speed.
[profile.release.package.webclaw-mcp]
opt-level = "z"

